Remap to Nostalgia and use modern Babric plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-	# check these on https://babric.github.io/develop/
-	minecraft_version=b1.7.3
-	yarn_mappings=b1.7.3-build.2
-	loader_version=0.14.24-babric.1
+minecraft_version=b1.7.3
+nostalgia_mappings=b1.7.3+build.33
+loader_version=0.16.10
 
 # Mod Properties
-	mod_version = 0.1.1
-	maven_group = com.github.Adventurecraft-Awakening
-	archives_base_name = Macula
+mod_version = 0.1.1
+maven_group = com.github.Adventurecraft-Awakening
+archives_base_name = Macula
