--- a/build.gradle
+++ b/build.gradle
@@ -1,61 +1,61 @@
 plugins {
-	id 'babric-loom' version '1.4-SNAPSHOT'
-	id 'maven-publish'
+	id "maven-publish"
+	id "fabric-loom" version "1.10.1"
+	id "babric-loom-extension" version "1.10.1"
 }
 
-sourceCompatibility = targetCompatibility = JavaVersion.VERSION_21
-
-archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
+base {
+	archivesName = project.archives_base_name
+}
+
 loom {
-	gluedMinecraftJar()
-	customMinecraftManifest.set("https://babric.github.io/manifest-polyfill/${minecraft_version}.json")
-	intermediaryUrl.set("https://maven.glass-launcher.net/babric/babric/intermediary/%1\$s/intermediary-%1\$s-v2.jar")
 }
 
 repositories {
-	// Used for the fabric toolchain in this project.
+	// Used for Nostalgia mappings.
 	maven {
-		name = 'Babric'
-		url = 'https://maven.glass-launcher.net/babric'
+		name = "Wisp Forest"
+		url = "https://maven.wispforest.io"
 	}
-	// Used for mappings.
+
+	// Used for Brigadier.
 	maven {
-		name = 'Glass Releases'
-		url = 'https://maven.glass-launcher.net/releases'
+		name = "Mojang"
+		url = "https://libraries.minecraft.net"
 	}
-	// Used for projects that do not have a maven repository, but do have a GitHub repository with working build scripts.
+
+	// Used for projects without a maven, but on GitHub repos with working build scripts.
 	maven {
-		name = 'Jitpack'
-		url = 'https://jitpack.io'
+		name = "Jitpack"
+		url = "https://jitpack.io"
 	}
-	mavenLocal()
 }
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.glasslauncher:bin:${project.yarn_mappings}"
-	modImplementation "babric:fabric-loader:${project.loader_version}"
+	mappings "me.alphamode:nostalgia:${project.nostalgia_mappings}:v2"
+	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	implementation "org.slf4j:slf4j-api:1.8.0-beta4"
-	implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.16.0"
+	implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.18.0"
 }
 
 processResources {
-	inputs.property "version", project.version
-
 	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+		expand project.properties
 	}
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
+	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and
+	// to the "build" task if it is present.
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
+
+	sourceCompatibility = targetCompatibility = JavaVersion.VERSION_23
 }
 
 jar {
